2010-01-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4        Sync with Tcl version
	* unix/configure     (regenerated)
	* unix/Makefile.in
	* unix/.cvsignore
	* generic/default.h  Trivial CYGWIN fixes
	* generic/tkWindow.c
	* doc/.cvsignore

2010-01-06  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (TkWmMapWindow): [Bug 1163496]: Allow windows to be
	* tests/wm.test (wm-transient-8.1): set to be transients for withdrawn
	masters correctly.

2010-01-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: [Patch 2898255]: Enable unlimited multiple
	file selection from the open files dialog (pawlak,fellows,thoyts)

2010-01-05  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkMenu.c (MenuWidgetObjCmd): [Bug 220950]: Do not delete
	menu entries if the first index to delete is explicitly after the last
	index of existing entries.

2010-01-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/dialog.tcl: Backported fix for tk_dialog <Return> binding
	* library/console.tcl: Backported fix for console keyboard menu
	activation and <<Cut>> handling from HEAD.
	* library/tk.tcl: Correctly handle quoted ampersands in AmpMenuArgs

2010-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkMenu.h: [Patch 2848897] Support the system keyboard
	* win/tkWinMenu.c:  cues option on Windows. This system parameter
	hides the underlines on menu items unless the keyboard is used to
	open the menu. (kovalenko, thoyts)

2010-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/tearoff.tcl: tearoff menus should be transient and use the
	                       toolwindow style on Windows.
	* tests/menu.test: menu tests using 'tkwait visibility' are unix only

2010-01-02  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixEvent.c (TransferXEventsToTcl): [Bug 1924761]: Use the
	new cache mechanism to force the extraction of the string of a key
	event from XIM at the right time rather than after queueing when it